client/app/app.css
/* ... */
/* ==========================================================================
Proxima Nova Semi-Bold
========================================================================== */
@font-face{
  font-family: "ProximaNova";
  font-weight: 600;
  src: url("../assets/fonts/ProximaNova/ProximaNovaSbold.otf") format("opentype");
}

/* ==========================================================================
Proxima Nova Light
========================================================================== */
/* Light and thin font commented out of the style. To be revisted as needed.
@font-face{
font-family: "ProximaNova";
src: url("../assets/fonts/ProximaNova/ProximaNovaLight.otf") format("opentype");
}*/

/* ==========================================================================
Proxima Nova Thin
========================================================================== */
/* Light and thin font commented out of the style. To be revisted as needed.
@font-face{
font-family: "ProximaNova";
src: url("../assets/fonts/ProximaNova/ProximaNovaThin.otf") format("opentype");
} */

/* ==========================================================================
Center the images
========================================================================== */
img.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* ==========================================================================
Main image and style for above the fold on the home-page
========================================================================== */
.jumbotron {
  background: url(../assets/images/jumbotron/bg-ucsdC.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  max-height: 590px;
  margin-top: -70px;
}

/* ==========================================================================
Jumbotron header color as white
========================================================================== */
.jumbotron h1 {
  color: #FFFFFF;
}

/* ==========================================================================
Style for How It Works section
========================================================================== */
.howitworks {
  background: url(../assets/images/howitworks/bg-ucslb.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 600px;
}

/* ==========================================================================
Style for footer
========================================================================== */
.joinrented {
  background: url(../assets/images/footer/bg-uci.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 200px;
}

.footer  a {
  color: #333333;
}

.footer .logo {
  text-align: center;
}

.footer img {
  margin-top: -3px;
}

.footer .link {

}

.page-header {
  padding-bottom: 0px;
  margin: 0px;
  border-bottom: none;
}
/* ==========================================================================
Transparent class for transparent nav-bar
========================================================================== */
.navbar{
  border-radius: 0;
}
.navbar.transparent.navbar-default .navbar-header {
  background: rgba(0,0,0,0.5);
}

/* ==========================================================================
Navbar settings - not sure if these three are required
========================================================================== */

.navbar-header{
  padding-top: 10px;
}

.navbar-inner {
  min-height: 0px;
}

/* ==========================================================================
Posting input text type
========================================================================== */
.input-post{

}

.input-post input[type="number"] {
  height: 34px;
  background: #ffffff;
  color: rgba(0, 0, 0, 0.55);
  text-align: left;
  border-radius: 50px;
}

.input-post input[type="text"] {
  height: 34px;
  background: #ffffff;
  color: rgba(0, 0, 0, 0.55);
  text-align: left;
  border-radius: 50px;
}

.input-post input[type="email"] {
  height: 34px;
  background: #ffffff;
  color: rgba(0, 0, 0, 0.55);
  text-align: left;
  border-radius: 50px;
}

.input-post select{
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 34px;
  background: #e8e8e8;
  color: rgba(0, 0, 0, 0.55);
  text-align: left;
  border-radius: 50px;
}

.input-post textarea{
  resize: none;
  margin-top: 30px;
}

.input-post-2 {
  margin-left: 10px;
}

.input-post-2 textarea{
  resize: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: rgba(0, 0, 0, 0.55);
  text-align: left;
  border-radius: 50px;
}

.input-post-readonly {

}

.input-post-readonly input[type="number"] {
  height: 34px;
  background: #e8e8e8;
  color: rgba(0, 0, 0, 0.55);
  text-align: left;
  border-radius: 50px;
}

.input-post-readonly input[type="text"] {
  height: 34px;
  background: #e8e8e8;
  color: rgba(0, 0, 0, 0.55);
  text-align: left;
  border-radius: 50px;
}

.rooms .sortBox select{
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 34px;
  background: #ffffff;
  color: rgba(0, 0, 0, 0.55);
  text-align: right;
  border-radius: 25px;
}

/* ==========================================================================
Sign-up button class
========================================================================== */
.btn-rented-signup {
  margin-top: 10px;
  height: 20px;
  background: #fff;
  color: rgba(0, 0, 0, 0.55);
  text-align: center;
  line-height: 0px !important;
  border-radius: 50px;
}

/* ==========================================================================
Sign-up button class - hover
Color changes
========================================================================== */

.btn-rented-signup:hover {
  background-color: #e4e4e4;
  color: #000000;
}
/* ... */

